@@ -75,6 +75,53 @@
 void
 plf_hardware_init(void)
 {
+    // POWER_FAIL IRQ
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_PWR_FAIL_IRQ_N);   
+    HAL_INTERRUPT_CONFIGURE(CYGNUM_HAL_INTERRUPT_PWR_FAIL, 1, 0);
+
+    // DSL IRQ
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_DSL_IRQ_N);
+    HAL_INTERRUPT_CONFIGURE(CYGNUM_HAL_INTERRUPT_DSL, 1, 0);
+
+    // SLIC_A IRQ
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_SLIC_A_IRQ_N);
+    HAL_INTERRUPT_CONFIGURE(CYGNUM_HAL_INTERRUPT_SLIC_A, 1, 0);
+
+    // SLIC_B IRQ
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_SLIC_B_IRQ_N);
+    HAL_INTERRUPT_CONFIGURE(CYGNUM_HAL_INTERRUPT_SLIC_B, 1, 0);
+
+    // DSP IRQ
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_DSP_IRQ_N);
+    HAL_INTERRUPT_CONFIGURE(CYGNUM_HAL_INTERRUPT_DSP, 1, 0);
+
+    // IDE IRQ
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_IDE_IRQ_N);
+    HAL_INTERRUPT_CONFIGURE(CYGNUM_HAL_INTERRUPT_IDE, 1, 0);
+
+    // IO RESET_N  (DSP/SLICs)
+    HAL_GPIO_OUTPUT_SET(GPIO_IO_RESET_N);
+    HAL_GPIO_OUTPUT_ENABLE(GPIO_IO_RESET_N);
+    
+    // SPI_CS1_N
+    HAL_GPIO_OUTPUT_SET(GPIO_SPI_CS1_N);
+    HAL_GPIO_OUTPUT_ENABLE(GPIO_SPI_CS1_N);   // Eth PHY
+
+    // SPI_CS0_N
+    HAL_GPIO_OUTPUT_SET(GPIO_SPI_CS0_N);
+    HAL_GPIO_OUTPUT_ENABLE(GPIO_SPI_CS0_N);   // SLICs
+
+    // SPI_SCK
+    HAL_GPIO_OUTPUT_CLEAR(GPIO_SPI_SCK);
+    HAL_GPIO_OUTPUT_ENABLE(GPIO_SPI_SCK);
+
+    // SPI_SDI
+    HAL_GPIO_OUTPUT_CLEAR(GPIO_SPI_SDI);
+    HAL_GPIO_OUTPUT_ENABLE(GPIO_SPI_SDI);
+
+    // SPI_SDI
+    HAL_GPIO_OUTPUT_DISABLE(GPIO_SPI_SDI);
+
 #ifdef CYGPKG_IO_PCI
     extern void hal_plf_pci_init(void);
     hal_plf_pci_init();
